# pyems

./: README.org  pyproject.toml
.github/workflows/: ci.yml
docs/: runner_cli_contract.md
docs/adr/: 0001-schema-versioning.md  0002-boundary-encoding.md  0003-material-identity.md  0004-provenance-fields.md  0005-units-policy.md  0006-s-parameter-devices.md  0007-units-conventions.md
pyems/: boundary.py  calc.py  config.py  const.py  coordinate.py  csxcad.py  feed.py  field_dump.py  material.py  mesh.py  nf2ff.py  pcb.py  port.py  probe.py  runner.py  simulation.py  structure.py  utilities.py
schema/: CHANGELOG.md  README.md  v1.json
tests/: test_calc.py  test_config.py  test_interface_hardening.py  test_no_stray_unit_math.py  test_runner.py  test_units.py
tests/fixtures/: horn_antenna_nf2ff.json  single_port_microstrip.json  single_port_microstrip_with_dump.json  two_port_filter.json
