[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyems"
version = "0.2.0"
description = "Headless python backend for OpenEMS simulations"
authors = [
    { name = "Matt Huszagh", email = "huszaghmatt@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.5.2",
    "CSXCAD"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
